--- a/Multiplepdf/Requirements.txt
+++ b/Multiplepdf/Requirements.txt
@@ -2,11 +2,9 @@ langchain
 openai
 PyPDF2
 faiss-cpu
-huggingface-hub
 python-dotenv
 sentence-transformers
-ctransformers==0.2.5
-python-magic-bin==0.4.14
+python-magic==0.4.24
 tiktoken
 Streamlit
 google-generativeai
